--- a/index.HTML
+++ b/index.HTML
@@ -4,112 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programiz JavaScript Online Compiler</title>
-    <style>
-        body, html {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            background-color: #1e1e1e;
-            color: #d4d4d4;
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-        }
-        .header {
-            background-color: #252526;
-            padding: 10px 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .logo {
-            font-weight: bold;
-            color: white;
-        }
-        .pro-button {
-            background-color: #252526;
-            border: 1px solid #d4d4d4;
-            color: #d4d4d4;
-            padding: 5px 10px;
-            border-radius: 5px;
-        }
-        .main {
-            display: flex;
-            flex-grow: 1;
-        }
-        .sidebar {
-            width: 50px;
-            background-color: #252526;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding-top: 10px;
-        }
-        .sidebar-icon {
-            width: 24px;
-            height: 24px;
-            margin-bottom: 15px;
-            background-color: #d4d4d4;
-        }
-        .content {
-            display: flex;
-            flex-grow: 1;
-        }
-        .editor-container {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-        }
-        .file-tab {
-            background-color: #2d2d2d;
-            padding: 8px 15px;
-            display: inline-block;
-        }
-        #code-area {
-            flex-grow: 1;
-            background-color: #1e1e1e;
-            color: #d4d4d4;
-            border: none;
-            padding: 10px;
-            font-family: monospace;
-            resize: none;
-        }
-        .output-container {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            border-left: 1px solid #333;
-        }
-        .output-header {
-            background-color: #252526;
-            padding: 10px;
-            font-weight: bold;
-        }
-        .output {
-            flex-grow: 1;
-            background-color: #1e1e1e;
-            padding: 10px;
-            font-family: monospace;
-            white-space: pre-wrap;
-            overflow-y: auto;
-        }
-        .bottom-panel {
-            background-color: #252526;
-            padding: 10px;
-            display: flex;
-            justify-content: flex-end;
-        }
-        .run-button {
-            background-color: #0078d4;
-            color: white;
-            border: none;
-            padding: 5px 15px;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <script src="myscripts.js"></script>
 </head>
 <body>
     <div class="container">
@@ -141,23 +37,6 @@ console.log("Try programiz.pro");</textarea>
         </div>
     </div>
 
-    <script>
-        function runCode() {
-            const code = document.getElementById('code-area').value;
-            const output = document.getElementById('output');
-            output.textContent = '';
-            try {
-                const oldLog = console.log;
-                console.log = function(...args) {
-                    output.textContent += args.join(' ') + '\n';
-                    oldLog.apply(console, args);
-                };
-                eval(code);
-                console.log = oldLog;
-            } catch (error) {
-                output.textContent = 'Error: ' + error.message;
-            }
-        }
-    </script>
+    
 </body>
 </html>
