--- a/index.HTML
+++ b/index.HTML
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programiz JavaScript Online Compiler</title>
     <link rel="stylesheet" href="style.css">
-    <script src="myscripts.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <div class="logo">Programiz</div>
-            <button class="pro-button">Programiz PRO ></button>
+            <div class="logo">DarkRai</div>
+            <button class="pro-button" onclick="redirectToLink()">Programiz PRO ></button>
         </div>
         <div class="main">
             <div class="sidebar">
@@ -21,10 +21,10 @@
                 <div class="editor-container">
                     <div class="file-tab">main.js</div>
                     <textarea id="code-area" spellcheck="false">
-// Online Javascript Editor for free
-// Write, Edit and Run your Javascript code using JS Online Compiler
+                     // Online Javascript Editor for free
+                      // Write, Edit and Run your Javascript code using JS Online Compiler
 
-console.log("Try programiz.pro");</textarea>
+                     console.log("Hello world");</textarea>
                     <div class="bottom-panel">
                         <button class="run-button" onclick="runCode()">Run</button>
                     </div>
