--- a/index.HTML
+++ b/index.HTML
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="header">
             <div class="logo">DarkRai</div>
-            <button class="pro-button" onclick="redirectToLink()">Programiz PRO ></button>
+            <button class="pro-button" onclick="redirectToLink()">GitHub</button>
         </div>
         <div class="main">
             <div class="sidebar">
