changed main.js to Script.js

--- a/index.HTML
+++ b/index.HTML
@@ -19,7 +19,7 @@
             <div class="content">
                 <div class="editor-container">
                     
-                    <div class="file-tab">main.js
+                    <div class="file-tab">Script.js
                         <button class="run-button" onclick="runCode()">Run</button>
                     </div>
                     
