--- a/index.HTML
+++ b/index.HTML
@@ -6,7 +6,9 @@
     <title>Programiz JavaScript Online Compiler</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/android-chrome-192x192.png">
+
     <script src="script.js" defer></script>
 </head>
 <body>
