--- a/index.HTML
+++ b/index.HTML
@@ -25,8 +25,8 @@
                     <div class="file-tab">Script.js
                         <div class="buttons">
                             <button class="btn-style clear-btn" onclick="clearCode()"><i class="fas fa-eraser"></i> Clear</button>
-                            <button class="btn-style copy-btn" onclick="copyCode()"><i class="fas fa-copy"></i> Copy</button>
-                            <button class="btn-style run-btn" onclick="runCode()"><i class="fas fa-play"></i> Run</button>
+                            <button class="btn-style copy-btn" onclick="copyCode()"><i class="fa-regular fa-copy"></i></button>
+                            <button class="btn-style run-btn" onclick="runCode()"><i class="fa-solid fa-play"></i></button>
                         </div>
                     </div>
                     <textarea id="code-area" spellcheck="false">
