--- a/index.HTML
+++ b/index.HTML
@@ -11,33 +11,37 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
 
+    <!-- Include Prettier Library -->
+    <script src="https://unpkg.com/prettier@2.8.3/standalone.js"></script>
+    <script src="https://unpkg.com/prettier@2.8.3/parser-babel.js"></script>
     <script src="script.js" defer></script>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <div class="logo">Javascript Online Complier</div>
+            <div class="logo">JavaScript Online Compiler</div>
             <button class="pro-button" onclick="redirectToLink()"> <i class="fab fa-github"></i>GitHub</button>
         </div>
         <div class="main">
             <div class="content">
                 <div class="editor-container">
-                    <div class="file-tab">Script.js
+                    <div class="file-tab">
+                        Script.js
                         <div class="buttons">
-
                             <button class="btn-style imp-btn" onclick="impCode()" title="Import"><i class="fas fa-download"></i></button>
                             <button class="btn-style clear-btn" onclick="clearCode()" title="Clear"><i class="fas fa-eraser"></i></button>
                             <button class="btn-style copy-btn" onclick="copyCode()" title="Copy"><i class="fas fa-copy"></i></button>
-                            <button class="btn-style run-btn" onclick="runCode()" title="Run"><i class="fas fa-play"></i></button>
-
+                            <button class="btn-style format-btn" onclick="formatCode()" title="Format"><i class="fas fa-align-left"></i></button>
+                            <button class="btn-style run-btn" onclick="runCode()" title="Run"><i class="fas fa-play"></i>
+                            </button>
                         </div>
                     </div>
                     <textarea id="code-area" spellcheck="false">
-// Online Javascript Editor for free
-// Write, Edit and Run your Javascript code using JS Online Compiler
+// Online JavaScript Editor for free
+// Write, Edit and Run your JavaScript code using JS Online Compiler
 
-console.log("Hello world");</textarea>
-
+console.log("Hello world");
+</textarea>
                 </div>
                 <div class="output-container">
                     <div class="output-header">Output</div>
@@ -46,5 +50,6 @@ console.log("Hello world");</textarea>
             </div>
         </div>
     </div>
+   
 </body>
 </html>
